# spi-pio

./: Cargo.toml
.cargo/: config.toml
examples/: pico_spi_pio_sd_card.rs
src/: lib.rs
