[package]
name = "spi-pio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SPI driver implementation using the RP2040's PIO peripheral."
documentation = "https://docs.rs/spi-pio"
repository = "https://github.com/rp-rs/spi-pio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
pio = "0.2.1"
pio-proc = "0.2"
rp2040-hal = "0.10.2"
fugit = "0.3.7"
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
rp2040-hal = { version = "0.10.2", features = ["defmt"] }
rp-pico = "0.9.0"
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
cortex-m-rt = "0.7"
nb = "1.1"
embedded-sdmmc = "0.9.0"
pio = "0.2.1"
pio-proc = "0.2"
critical-section = "1.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
